# LearnIT-Study-Fetcher

./: .gitignore  PROJECT_SPEC.md  README.md  pyproject.toml  render.yaml
src/learnit_study/: __init__.py  ai_notes.py  auth.py  cli.py  courses.py  downloader.py  extraction.py  flashcards.py  notes.py  parser.py  storage.py
src/learnit_study/extractors/: __init__.py  docx.py  html.py  pdf.py  pptx.py  text.py
src/learnit_study/web/: __init__.py  app.py
src/learnit_study/web/static/: style.css
src/learnit_study/web/templates/: base.html  course.html  courses.html  error.html  index.html  job.html  login.html  notes.html
tests/: test_ai_notes.py  test_auth.py  test_cli.py  test_courses.py  test_downloader.py  test_extraction.py  test_notes.py  test_parser.py  test_web.py
tests/fixtures/: course_page.html  course_page_database_nested.html  course_page_nested.html  course_page_no_sections.html
