[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learnit-study-assistant"
version = "0.1.0"
description = "Local-first command-line study assistant for ITU LearnIT/Moodle."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "learnit-study-assistant contributors" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "gunicorn>=22.0",
  "google-genai>=1.0",
  "itsdangerous>=2.2",
  "jinja2>=3.1",
  "pypdf>=4.0",
  "pydantic>=2.0",
  "python-docx>=1.1",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "python-pptx>=0.6.23",
  "requests>=2.31",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "typer>=0.12",
]

[project.scripts]
learnit-study = "learnit_study.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
learnit_study = ["web/templates/*.html", "web/static/*.css"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
